--- a/style_guide/css/main.css
+++ b/style_guide/css/main.css
@@ -28,12 +28,20 @@ main {
 	/*border:1px solid black;*/
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1 {
   font-family: "Boldonse", system-ui;
   font-weight: 400;
   font-style: normal;
 }
 
+h3{
+	font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 900;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 200;
+}
 
 h1{
 	border-bottom: 1px solid black;
@@ -50,6 +58,22 @@ p {
     "wdth" 100;
 }
 
+p1 {
+	font-family: "Boldonse", system-ui;
+  font-weight: 400;
+  font-style: normal;
+
+}
+
+p3 {
+	font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
 .outer_wrapper{
 	display: flex;
 }
@@ -57,4 +81,18 @@ p {
 .inner{
 	width:50%;
 	padding:10px;
+}
+
+
+figure {
+    border-bottom: 5px solid black;
+    margin: 0;
+}
+
+h2  {
+  text-align: center;
+}
+
+h3  {
+  text-align: center;
 }
